2009-04-09  Sanel <karijes@users.sourceforge.net>

	* src/Run.cpp: BSD's keeps BSD definition in sys/param.h

2009-04-08  Sanel <karijes@users.sourceforge.net>

	* INSTALL: corrected environment variables
	* m4/fltk.m4: remove unneeded comma
	* src/Run.cpp: include needed headers for BSD systems

2009-04-07  Sanel <karijes@users.sourceforge.net>

	* test/UnitTest.h:
	* test/UnitTest.cpp:
	* test/run_tests.cpp: return 1 if tests failed or 0 if opposite
	* run-tests.sh: added

2009-04-02  Sanel <karijes@users.sourceforge.net>

	* edelib/Color.h:
	* src/Color.cpp: 
	* test/color.cpp: color_html_to_rgb() and color_rgb_to_html() added with
	tests

2009-03-30  Sanel <karijes@users.sourceforge.net>

	* INSTALL: small clarifications
	* Jamrules: removed some vars used for playgrounds

2009-03-28  Sanel <karijes@users.sourceforge.net>

	* edelib/EdbusData.h: fix error on sun compiler
	* edelib/MessageBox.h:
	* src/MessageBox.cpp:
	* src/Run.cpp: fix warnings on sun compiler
	* INSTALL: compiling on SunStudio
	* edelib/FileTest.h: small changes in the doc
	* src/Directory.cpp: dir_create_with_parents() needs file_test()
	* edelib/*: documented macros

2009-03-27  Sanel <karijes@users.sourceforge.net>

	* src/IconChooser.cpp: some refactoring, use Fl_Double_Window
	* edelib/IconChooser.h: todo how it needs to be rewritten
	* edelib/FileTest.h:
	* src/FileTest.cpp:
	* test/file_test.cpp: added file_test() function with tests
	* src/FileTest.cpp: use lstat() for links
	* all: updated code to use file_test(); deprecated dir_*() and file_*()
	functions that do the same job; removing unneeded checks before
	file/directory open operations

2009-03-25  Sanel <karijes@users.sourceforge.net>

	* src/IconLoader.cpp: let get() check fallback icon too; some sanity
	checks
	* edelib/IconLoader.h: document get() behaviour
	* edelib/IconLoader.h: document how to get image object
	* src/IconLoader.cpp: remove previous image from Fl_Shared_Image cache